k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-test-service
spec:
  selector:
    app: kube-test-pod
  ports:
    - port: 8080
      name: api
      protocol: TCP
      targetPort: api
    - port: 8081
      name: monitoring
      protocol: TCP
      targetPort: monitoring
  type: ClusterIP
